import org.gradle.api.JavaVersion

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.5'
    id 'io.spring.dependency-management' version '1.1.3'
}

def keycloakVersion = '22.0.5'
def lombokVersion = '1.18.30'

group = 'uk.gov.digital.ho.hocs'
sourceCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
}

dependencies {

    implementation('org.springframework.boot:spring-boot-starter-web') {
        exclude(module: 'spring-boot-starter-tomcat')
    }
    implementation 'org.springframework.boot:spring-boot-starter-undertow'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation "com.amazonaws:aws-java-sdk-sns:1.12.472"
    implementation 'net.logstash.logback:logstash-logback-encoder:8.0'

    implementation 'org.apache.httpcomponents:httpmime:4.5.14'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'

    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.14.3'
    implementation "org.keycloak:keycloak-admin-client:${keycloakVersion}"
    implementation "org.keycloak:keycloak-services:${keycloakVersion}"

    implementation 'org.apache.commons:commons-csv:1.10.0'
    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
    implementation 'com.jayway.jsonpath:json-path:2.8.0'
    implementation 'jakarta.json:jakarta.json-api:2.1.1'
    implementation group: 'org.eclipse.parsson', name: 'parsson', version: '1.1.5'

    // This should be kept in line with the data Dockerfile versions
    implementation 'org.flywaydb:flyway-core:9.19.3'
    runtimeOnly 'org.hsqldb:hsqldb'
    runtimeOnly 'org.postgresql:postgresql:42.6.0'

    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.springframework:spring-context-indexer:6.0.6'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.vintage:junit-vintage-engine:5.10.1'
    testImplementation 'org.assertj:assertj-core'


    testImplementation 'org.mockito:mockito-inline:5.2.0'
}

jar {
    enabled = false
}
